Prevent page jump when scrollbar appears

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -11,6 +11,10 @@ font-feature-settings()
 	-ms-font-feature-settings arguments
 	font-feature-settings arguments
 
+// Fix page jumping between scroll and non-scroll
+html
+	overflow-y scroll
+
 // Background color
 .theme-container
 	background-color #fdfdfd
